src/test/compile-fail/issue-2509-a.rs
struct c { //~ ERROR a struct must have at least one field
}

fn main() {
}
